name:                servant-back-end
version:             0.1.0.0
synopsis:            A simple RESTful back end using Servant.
license:             BSD3
license-file:        LICENSE
author:              Jason Stolaruk
maintainer:          jason@detroitlabs.com
copyright:           Copyright (c) 2015, Jason Stolaruk and Detroit Labs LLC
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable servant-back-end
  main-is:             Main.hs
  other-modules:       InitData, Types
  other-extensions:    DataKinds, DeriveGeneric, TypeFamilies, TypeOperators
  build-depends:         base >=4.8 && <4.9
                       , containers >=0.5 && <0.6
                       , either >=4.4 && <5.0
                       , servant-server >=0.4 && <0.5
                       , aeson >=0.10 && <0.11
                       , text >=1.2 && <2.0
                       , time >=1.5 && <2.0
                       , wai >=3.0 && <4.0
                       , warp >=3.1 && <4.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
