name:                servant-back-end
version:             0.1.0.0
synopsis:            Demo of an automotive back end using servant.
license:             BSD3
license-file:        LICENSE
author:              Jason Stolaruk
maintainer:          jason@detroitlabs.com
copyright:           Copyright (c) 2016, Jason Stolaruk and Detroit Labs LLC
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable servant-back-end
  main-is:             Main.hs
  other-modules:       InitData, InMemoryDb, Types
  other-extensions:    DataKinds, DeriveGeneric, OverloadedStrings, TypeOperators
  build-depends:         base 
                       , containers 
                       , either 
                       , servant-server 
                       , aeson 
                       , text 
                       , time 
                       , transformers 
                       , wai 
                       , warp 
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
